# osbuild-getting-started

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  git_stack.sh  osbuild-getting-started-fedora39.toml.template  osbuild-getting-started-fedora39.xml.template  setup.cfg
docs/: src_compile.dot  src_compile_onprem.dot  src_compile_service.dot
on-prem/: Makefile  README.md
on-prem/src/ogsc/run/cli/: Containerfile
on-prem/src/ogsc/run/composer/: Containerfile  entrypoint.py
on-prem/src/ogsc/run/worker/: Containerfile
service/: .env  README.md  docker-compose-onprem.yml  docker-compose.yml
service/config/: Dockerfile-config  Dockerfile-config-onprem
service/config/backend/: quotas.json
service/config/composer/: osbuild-composer-onprem.toml
service/config/worker/: osbuild-worker.toml  s3-credentials
service/tools/: gen-certs.sh
src/ogsc-build-weldr-client/: Containerfile
src/ogsc-composer/: Containerfile
src/ogsc/run/cli/: Containerfile
src/ogsc/run/cli/data/: blueprint.toml
src/ogsc/run/composer/: Containerfile
src/ogsc/run/worker/: Containerfile
src/osbuild_crew/: rich.py
src/osbuild_crew/cli/: __init__.py  build.py  manifest.py
src/osbuild_crew/data/: __init__.py
src/osbuild_crew/data/container_files/: __init__.py  build.py  run.py
src/osbuild_crew/help/: cmd.py  git.py  podman.py  project.py
