[metadata]
name = osbuild_getting_started
version = 0.1
description = osbuild getting started
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/x-md
url = https://github.com/osbuild/osbuild-getting-started
project_urls =
    Issues = https://github.com/osbuild/osbuild-getting-started/issues
    Source = https://github.com/osbuild/osbuild-getting-started
author = Simon de Vlieger
author_email = supakeen@redhat.com
license = Apache
zip_safe = False
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    osbuild_crew
package_dir =
    = src
install_requires =
    typer
    attrs
    rich

[options.entry_points]
console_scripts =
    osbuild-crew = osbuild_crew.__main__:cli

[wheel]
universal = 1
